--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "The_Last_Shuriken";
+    src: url("../fonts/the-last-shuriken/The_Last_Shuriken.ttf");
+  }
